--- a/package.json
+++ b/package.json
@@ -16,9 +16,13 @@
     "@angular/core": "~12.2.0",
     "@angular/fire": "^6.1.5",
     "@angular/forms": "~12.2.0",
+    "@angular/localize": "~12.2.0",
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
+    "@ng-bootstrap/ng-bootstrap": "^10.0.0",
+    "animate.css": "^4.1.1",
+    "bootstrap": "^4.5.0",
     "firebase": "^8.9.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
